Fix the grid spacing horizontaly; Automatically sizing the children

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,22 @@
 .sketchPadContainer {
     text-align: center;
     display: flex;
-    width: 960px;
-    height: 960px;
+    box-sizing: content-box;
+    width: 640px;
+    height: 640px;
+    border: 1px solid black;
+    justify-content: space-around;
+    align-content: space-around;
+    flex-wrap: wrap;
+    gap: 0px;
+    padding: 0px;
+    margin: 5px;
 }
 
 .sketchPadElement {
-    flex: auto;
+    box-sizing: border-box;
+    border: 0.01mm solid black;
+    background-color: lightgrey;
+    flex: 1 0 auto;
+    margin: 0;
 }
